@@ -2,10 +2,12 @@ package it.unive.jlisa.program.type;
 import it.unive.lisa.type.Type;
 import it.unive.lisa.type.TypeSystem;
 
+import java.util.Collections;
 import java.util.Set;
 
 public class ByteType implements JavaNumericType {
     public static final ByteType INSTANCE = new ByteType();
+    
     @Override
     public String toString() {
         return "byte";
@@ -43,6 +45,6 @@ public class ByteType implements JavaNumericType {
 
     @Override
     public Set<Type> allInstances(TypeSystem types) {
-        return Set.of();
+        return Collections.singleton(this);
     }
 }
